# ssprompt

./: README.md  install.py  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
ssprompt/: __main__.py  __version__.py  ssprompt.py
ssprompt/console/: application.py
ssprompt/console/commands/: about.py  add.py  command.py  init.py  new.py  pull.py  show.py  version.py
ssprompt/console/logging/: filters.py  io_formatter.py
ssprompt/core/config/: __init__.py  config.py  pyyaml.py
ssprompt/core/prompthub/: __init__.py  abstract_prompthub.py  git_prompthub.py
ssprompt/core/prompthub/example/: example.yaml
ssprompt/core/prompthub/example/python/example/: __init__.py  example.py
ssprompt/core/prompthub/example/text/: example.txt
ssprompt/core/vcs/: git.py
ssprompt/layouts/: __init__.py  layout.py
ssprompt/repositories/: __init__.py  abstract_repository.py  pypi_repository.py
ssprompt/utils/: _compat.py
