[tool.poetry]
name = "ssprompt"
version = "0.1.0"
description = ""
authors = ["chenfudong <260431910@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^2.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
