[tool.poetry]
name = "ssprompt"
version = "0.0.5"
description = "A LLM Prompt distribution tool"
authors = ["ptonlix <baird0917@163.com>"]
readme = "README.md"

[tool.poetry.scripts]
ssprompt = "ssprompt.console.application:main"

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^2.0.1"
requests = "^2.31.0"
tqdm = "^4.66.1"
pydantic = "1.10.*"
pyyaml = "~6.0"
packaging = "~23.1"
importlib-metadata = "^6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
